--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,7 +18,8 @@
     "@ai-sdk/openai": "1.3.23",
     "@clerk/backend": "^2.19.1",
     "@convex-dev/agent": "0.1.16",
-    "@convex-dev/rag": "^0.5.4",
+    "@convex-dev/agent-playground": "^0.0.17",
+    "@convex-dev/rag": "^0.3.5",
     "ai": "4.3.19",
     "convex": "1.25.4",
     "convex-helpers": "0.1.100",
