--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,15 +14,16 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "@ai-sdk/google": "1.2.22",
-    "@ai-sdk/openai": "1.3.23",
-    "@clerk/backend": "^2.19.1",
+    "@ai-sdk/google": "^1.0.0",
+    "@ai-sdk/openai": "^1.3.23",
+    "@aws-sdk/client-secrets-manager": "^3.859.0",
+    "@clerk/backend": "^2.6.1",
     "@convex-dev/agent": "0.1.16",
-    "@convex-dev/agent-playground": "^0.0.17",
-    "@convex-dev/rag": "^0.3.5",
-    "ai": "4.3.19",
+    "@convex-dev/agent-playground": "0.0.17",
+    "@convex-dev/rag": "^0.3.3",
+    "ai": "^4.3.19",
     "convex": "1.25.4",
-    "convex-helpers": "0.1.100",
-    "zod": "3.25.67"
+    "convex-helpers": "^0.1.100",
+    "zod": "^3.25.76"
   }
 }
